# panmap

./: .clang-format  .dockerignore  .gitattributes  .gitignore  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  MULTIPANMAT.md  README.md  Snack  Snakefile  TESTING.md  a.jsonl  build-docker.sh  create_grid_plot.py  environment.yml  eval-run-this.sh  genomic_mutation_analysis.py  index.capnp  index.html  index.proto  index_lite.capnp  make.sh  mgsr_index.capnp  mkdocs.yml  mymake.sh  panman_compat.h  panmap.bam  panmap.mpileup  panmap.reference.fa  panmap.reference.fa.fai  panmap.vcf  panmap_testing_output.txt  profile.sh  run_plotting_only.py  run_workflow.sh  (+4 more)
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build.yml.disabled  ci.yml  docs.yml  docs.yml.disabled  release.yml
cli-reference/: index.html
cmake/: CapnProtoMacros.cmake  FindCapnProto.cmake  FindProtobuf.cmake  PatchSamtoolsMakefile.cmake  TBBConfig.cmake  bam_plcmd.c.patch  build.sh  detect-arch.cmake  dummy_toolchain.cmake  fix_copy_protobuf.sh  generate_proto_files.sh  map.c.patch  minimap2_target.cmake  panman_capnp_limits.patch  panman_cmakelists.patch  panman_tbb_fix.patch  patch-file.cmake  patch_panman.cmake  patch_panman.sh
data/clinical_sequence_submissions/: acessions.info.tsv  clinical_10_day_average.tsv  clinical_3_day_average.tsv  clinical_5_day_average.tsv  clinical_7_day_average.tsv
data/mammuthus/: extended_mammoth.panman  extended_mammoth_published_dna.fa  sample_ids.txt
dev/: Dockerfile  Snakefile  style.md
dev/accio_testing/: plot_sim_results_pure_reads.py
dev/eval/performance/: Dockerfile  Snakefile
dev/examples/: 2k.tar.gz.REMOVED.git-id  ex.fastq  ex1.fastq  example1.fastq  sars2k.fa.REMOVED.git-id  sars2k.json.REMOVED.git-id  sars2k.nwk  sars2k.pmat.pmi.REMOVED.git-id  sars_20000.pmat  sars_20000.pmat.REMOVED.git-id
dev/examples/pmats/: rsv_5000.pmat  sars_20000.pmat
dev/genotype_eval/: README.md  evaluate_real_mutations.sh  evaluate_simulated_mutations.sh  evaluate_simulated_mutations_panmap.sh  plot_roc_avg.py
dev/panmans/: rsv_4000.panman  rsv_4000.panman.mm  rsv_4000.panman.pmi
dev/simulation_testing/sim_variants/: STDERR_LOG  STDOUT_LOG  TIME_LOG  clear_logs  normalize  rf2vcf.py  run_panmap  run_test  test  vcf2rf.py
docs/: cli-reference.md  index.md  installation.md  metagenomic.md  mkdocs.yml  outputs.md  quickstart.md  single-sample.md  troubleshooting.md
examples/: batch.tsv  check_examples.sh
examples/data/: v_mtdna.meta.tsv
examples/data/panmans/: sars_20000_twilight_dipper.panman
examples/data/refs/: SNAPaddtlCov.bed
examples/expected/: README.md
examples/expected/filter_assign/: subsampled.mgsr.assignedReads.fastq  subsampled.mgsr.assignedReads.out  subsampled.mgsr.assignedReadsLCANode.out
examples/expected/meta_abundance/: example.mgsr.abundance.out
examples/expected/single_sample/: isolate.consensus.fa  isolate.placement.tsv  isolate.ref.fa  isolate.vcf
examples/wastewater/: README.md
installation/: index.html
metagenomic/: index.html
outputs/: index.html
quickstart/: index.html
recipe/: CMakeLists.txt  build.sh  meta.yaml  recipe.yaml
scripts/: assign_lineage.py  bump_version.sh  plot_spr_trace.py  trim_and_stack_amplicon.py
search/: search_index.json
single-sample/: index.html
src/: align.cpp  align.hpp  align_from_seeds.c  alignment.cpp  alignment.hpp  bam_to_mpileup.c  bitindex.test.cpp  bwa_align.c  caller_logging.hpp  combine_panmans.cpp  conversion.cpp  conversion.hpp  coordinate_tests.hpp  coordinates.cpp  coordinates.hpp  create-references.sh  eval-placement.sh  fixed_kmer.cpp  fixed_kmer.hpp  gap_map.cpp  gap_map.hpp  gap_map_utils.hpp  genotype.cpp  genotype.hpp  genotyping.cpp  genotyping.hpp  haplotype_filter.hpp  index.proto  index_lite.capnp  index_single_mode.cpp  index_single_mode.hpp  index_utils.cpp  index_utils.hpp  indexing.cpp  indexing.hpp  integration_test.cpp  logging.hpp  main.cpp  main2.cpp  merge_indexes.cpp  (+50 more)
src/accio/: chaining_mq.cpp
src/accio/backup/: mgsr.cpp  mgsr.hpp
src/backup/after_read_scores/: haplotype_filter.hpp
src/backup/before_score_update/: conversion.cpp  haplotype_filter.hpp  pmi.cpp
src/backup/original/: mgsr.hpp  pmi.cpp  pmi.hpp  seed_annotated_tree.cpp
src/include/: stdafx.cpp  stdafx.hpp
src/samtools_src/: bam2bcf.c  bam2depth.c  bam_addrprg.c  bam_ampliconclip.c  bam_aux.c  bam_cat.c  bam_color.c  bam_consensus.c  bam_fastq.c  bam_flags.c  bam_import.c  bam_index.c  bam_lpileup.c  bam_markdup.c  bam_mate.c  bam_md.c  bam_plbuf.c  bam_plcmd.c  bam_quickcheck.c  bam_reheader.c  bam_rmdup.c  bam_rmdupse.c  bam_samples.c  bam_sort.c  bam_split.c  bam_stat.c  bam_tview.c  bam_tview_curses.c  bam_tview_html.c  bamshuf.c  bamtk.c  bedcov.c  bedidx.c  config.h  config.mk  config.status  configure  consensus_pileup.c  coverage.c  cram_size.c  (+13 more)
src/samtools_src/autom4te.cache/: output.0  output.1  requests  traces.1
src/test/: conversions.test.cpp  correctness_tests.cpp  genotype.test.cpp  index_utils.cpp  integration_test.sh  main.test.cpp  meta.tsv  mgsr.test.cpp  mm.test.cpp  pmi.test.cpp  seed.test.cpp  simulate.cpp  test_conversion.cpp  test_core_utils.cpp  test_genotyping.cpp  test_index.cpp  test_main.cpp  test_mgsr.cpp  test_placement.cpp  test_seeding.cpp  tree.test.cpp
src/test/data/: 2ksars.mutmat  MZ515733.1.fa  MZ515733.1.fastq  rsv_4K.panman  rsv_4K.panman.random.JX576755.1.fa  rsv_4K.panman.random.KJ643583.1.fa  rsv_4K.panman.random.KU316100.1.fa  rsv_4K.panman.random.KX510193.1.fa  rsv_4K.panman.random.KX510231.1.fa  rsv_4K.panman.random.MH181914.1.fa  rsv_4K.panman.random.MH182031.1.fa  rsv_4K.panman.random.MN108246.1.fa  rsv_4K.panman.random.MN167843.1.fa  rsv_4K.panman.random.MN306045.1.fa  rsv_4K.panman.random.MN630104.1.fa  rsv_4K.panman.random.MZ151853.1.fa  rsv_4K.panman.random.MZ515795.1.fa  rsv_4K.panman.random.MZ515821.1.fa  rsv_4K.panman.random.MZ515996.1.fa  (+21 more)
troubleshooting/: index.html
web_server/: app.py  data.json
web_server/templates/: control_panel.html  index.html
(+924 files in other folders)
